website text update

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,9 +3,11 @@
         <div class="row row-pb-md">
             <div class="col-md-3 colorlib-widget">
                 <h4>About QLINES</h4>
-		<p>Using a cloud platform to manage your remote devices thousands of miles away, with
-                    on-demand instant access. The platform also provides an easy monitoring of sensor data and agent
-		    resource utilisation.</p>
+		<p>QLines is a cloud-native platform designed to manage the remote devices, even when they are thousands of miles away, providing on-demand instant access. QLines allows easy monitoring of real-time sensor data via MQTT, HTTP, WebSockets,etc. The platform benefits from geo and local redundancy, providing a reliable high-performance data processing.</p>
+        <!-- <p>A cloud-native platform designed for remote device management, regardless of geographical distance. With instant on-demand access, you can effortlessly oversee and control your devices from anywhere in the world.
+            Our platform offers seamless monitoring of sensor data and efficient agent resource utilization, providing you with valuable insights into your devices' performance.
+            Benefit from geo and local redundancy, enabling reliable data processing and ensuring uninterrupted operations.
+            Explore the technical prowess of QLines and streamline your remote device management with ease and precision. Embrace the power of simplified control and start optimizing your operations today.</p> -->
                 <p>
                 <ul class="colorlib-social-icons">
                     <li><a href="#"><i class="icon-twitter"></i></a></li>
