--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                         <div class="col-md-12 col-md-offset-0">
                             <div class="animate-box">
                                 <h2>Smooth out your remote access!</h2>
-                                <p>Deploy your agents and monitor the collected statistics in cloud!</p>
+                                <p>Effortlessly deploy your devices, seamlessly monitor agents!</p>
                             </div>
                         </div>
                     </div>
