removing the socketio temporarily for mvp

--- a/templates/dash_device_single.html
+++ b/templates/dash_device_single.html
@@ -12,7 +12,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
 
 <!-- The scripts for websocket (socketio) -->
-<script src="/static/js/websocket_updates.js"></script>
+<!-- <script src="/static/js/websocket_updates.js"></script> -->
 
 <!-- <script src="/static/js/cli.js"></script> -->
 
