2way mqtt works now

--- a/templates/dash_device_single.html
+++ b/templates/dash_device_single.html
@@ -97,11 +97,7 @@
 
                 <br>
                 <p>Result</p>
-                <p id="cli_result">
-                    Lorem ipsum dolor sit amet,in massa magna, adssdf sdf dsf ds
-                    vulputate nec bibendum nec, posuere nec laculiquam mi erat, aliquam vel luctus eu,
-                    pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.
-                </p>
+                <p id="cli_result"></p>
             </div>
         </div>
 
