working on page layout

--- a/templates/dash_device_single.html
+++ b/templates/dash_device_single.html
@@ -71,12 +71,22 @@
                         </tr>
                         <tr class="table-success">
                             <td>
-                                Registered on
+                                Registered
                             </td>
                             <td>
                                 <p id="ts_registered">{{device_info_to_render.ts_registered}}</p>
                             </td>
                         </tr>
+
+                        <tr class="table-success">
+                            <td>
+                                Last message
+                            </td>
+                            <td>
+                                <p id="ts_lastmessage"></p>
+                            </td>
+                        </tr>
+
 
                     </tbody>
                 </table>
