--- a/templates/header.html
+++ b/templates/header.html
@@ -2,20 +2,23 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Qlines</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="" />
-<meta name="keywords" content="" />
-<meta name="author" content="" />
+<meta name="description" content="Effortlessly deploy your devices, seamlessly monitor agents with Qlines - a remote access solution." />
+<meta name="keywords" content="iot, iiot, raspberry pi, esp 32, rpi, remote control, remote management, remote access, esp32, remote access, device deployment, agent monitoring, Qlines" />
+<meta name="author" content="qlines" />
 
-<!-- Facebook and Twitter integration -->
-<meta property="og:title" content="" />
-<meta property="og:image" content="" />
-<meta property="og:url" content="" />
-<meta property="og:site_name" content="" />
-<meta property="og:description" content="" />
-<meta name="twitter:title" content="" />
-<meta name="twitter:image" content="" />
-<meta name="twitter:url" content="" />
-<meta name="twitter:card" content="" />
+<!-- Facebook Integration -->
+<meta property="og:title" content="Qlines - Your Remote Access Solution" />
+<!-- <meta property="og:image" content="https://www.qlines.net" /> -->
+<meta property="og:url" content="https://www.qlines.net" />
+<meta property="og:site_name" content="Qlines" />
+<meta property="og:description" content="Effortlessly deploy your devices, seamlessly monitor agents with Qlines - a remote access solution." />
+
+<!-- Twitter Integration -->
+<meta name="twitter:title" content="Qlines - Your Remote Access Solution" />
+<!-- <meta name="twitter:image" content="https://www.example.com/your-image.jpg" /> -->
+<meta name="twitter:url" content="https://www.qlines.net" />
+<!-- <meta name="twitter:card" content="summary_large_image" /> -->
+
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
