--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,8 @@
                     <div class="container">
                         <div class="col-md-12 col-md-offset-0">
                             <div class="animate-box">
-                                <h2>Smooth out your remote access!</h2>
-                                <p>Effortlessly deploy your devices, seamlessly monitor agents!</p>
+                                <h2 style="color: white;" >Smooth out your remote access!</h2>
+                                <h1 style="color: white;" >Effortlessly deploy your devices, seamlessly monitor agents!</h1>
                             </div>
                         </div>
                     </div>
