--- a/templates/dash_base_template.html
+++ b/templates/dash_base_template.html
@@ -30,6 +30,10 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script>
+        $SCRIPT_ROOT = {{ request.script_root | tojson }};
+    </script>
+
     {% block header_content %} {% endblock %}
 
     <style>
@@ -54,17 +58,17 @@
         {% include 'dash_sidebar.html' %}
         <span class="glyphicon glyphicon-plus"></span>
         <div id="content" style="width:100%" class="p-2">
-            <nav class="navbar navbar-default">
+            <!-- <nav class="navbar navbar-default">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
                             <i class="glyphicon glyphicon-align-left"></i>
-                            <span></span>
+                            <span>a</span>
                         </button>
 
                         <button type="button" class="btn btn-info">
                             <i class="glyphicon glyphicon-align-right"></i>
-                            <span></span>
+                            <span>b</span>
                         </button>
 
                         <button type="button" class="btn btn-info logout-nav" onclick="window.location.href='/logout'">
@@ -72,7 +76,7 @@
                         </button>
                     </div>
                 </div>
-            </nav>
+            </nav> -->
 
             {% block page_content %} {% endblock %}
 
