--- a/templates/nav.html
+++ b/templates/nav.html
@@ -17,9 +17,9 @@
 
                         <li><a href="/">Home</a></li>
                         <!-- <li><a href="products">How it works</a></li> -->
-                        <li><a href="contact">Pricing</a></li>
+                        <li><a href="pricing">Pricing</a></li>
 						<li><a href="https://blog.qlines.net">Blog</a></li> 						
-                        <li><a href="/signup">Sign Up</a></li> 
+                        <li><a href="signup">Sign Up</a></li> 
 			            <li><a href="dashboard">Dashboard</a></li>
                         <li><a href="contact">Contact</a></li>
 
