adding privacy policy page for UtilityControl app

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,47 +6,37 @@
 <meta name="keywords" content="iot, iiot, raspberry pi, esp 32, rpi, remote control, remote management, remote access, esp32, remote access, device deployment, agent monitoring, Qlines" />
 <meta name="author" content="qlines" />
 
-<!-- Facebook Integration -->
+<!-- Facebook and Twitter Integration -->
 <meta property="og:title" content="Qlines - Your Remote Access Solution" />
-<!-- <meta property="og:image" content="https://www.qlines.net" /> -->
 <meta property="og:url" content="https://www.qlines.net" />
 <meta property="og:site_name" content="Qlines" />
 <meta property="og:description" content="Effortlessly deploy your devices, seamlessly monitor agents with Qlines - a remote access solution." />
 
-<!-- Twitter Integration -->
 <meta name="twitter:title" content="Qlines - Your Remote Access Solution" />
-<!-- <meta name="twitter:image" content="https://www.example.com/your-image.jpg" /> -->
 <meta name="twitter:url" content="https://www.qlines.net" />
-<!-- <meta name="twitter:card" content="summary_large_image" /> -->
 
-
+<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400" rel="stylesheet">
 
-<!-- Animate.css -->
-<link rel="stylesheet" href="../static/css/animate.css">
-<!-- Icomoon Icon Fonts-->
-<link rel="stylesheet" href="../static/css/icomoon.css">
-<!-- Bootstrap  -->
-<link rel="stylesheet" href="../static/css/bootstrap.css">
+<!-- CSS -->
+<link rel="stylesheet" href="/static/css/animate.css">
+<link rel="stylesheet" href="/static/css/icomoon.css">
+<link rel="stylesheet" href="/static/css/bootstrap.css">
+<link rel="stylesheet" href="/static/css/magnific-popup.css">
+<link rel="stylesheet" href="/static/css/owl.carousel.min.css">
+<link rel="stylesheet" href="/static/css/owl.theme.default.min.css">
+<link rel="stylesheet" href="/static/css/style.css">
 
-<!-- Magnific Popup -->
-<link rel="stylesheet" href="../static/css/magnific-popup.css">
-
-<!-- Owl Carousel -->
-<link rel="stylesheet" href="../static/css/owl.carousel.min.css">
-<link rel="stylesheet" href="../static/css/owl.theme.default.min.css">
-
-<!-- Theme style  -->
-<link rel="stylesheet" href="../static/css/style.css">
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="/static/images/favicon.png" sizes="16x16">
 
 <!-- Modernizr JS -->
-<script src="../static/js/modernizr-2.6.2.min.js"></script>
+<script src="/static/js/modernizr-2.6.2.min.js"></script>
 <!-- FOR IE9 below -->
 <!--[if lt IE 9]>
-<script src="../static/js/respond.min.js"></script>
+<script src="/static/js/respond.min.js"></script>
 <![endif]-->
-<link rel="icon" type="image/png" href="../static/images/favicon.png" sizes="16x16">
 
-<!-- Google tag (gtag.js) -->
+<!-- Google Analytics -->
 {% include 'google_analytics_tag.html' %}
