--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,18 +3,14 @@
         <div class="row row-pb-md">
             <div class="col-md-3 colorlib-widget">
                 <h4>About QLINES</h4>
-		<p>QLines is a cloud-native platform designed to manage the remote devices, even when they are thousands of miles away, providing on-demand instant access. QLines allows easy monitoring of real-time sensor data via MQTT, HTTP, WebSockets,etc. The platform benefits from geo and local redundancy, providing a reliable high-performance data processing.</p>
-        <!-- <p>A cloud-native platform designed for remote device management, regardless of geographical distance. With instant on-demand access, you can effortlessly oversee and control your devices from anywhere in the world.
-            Our platform offers seamless monitoring of sensor data and efficient agent resource utilization, providing you with valuable insights into your devices' performance.
-            Benefit from geo and local redundancy, enabling reliable data processing and ensuring uninterrupted operations.
-            Explore the technical prowess of QLines and streamline your remote device management with ease and precision. Embrace the power of simplified control and start optimizing your operations today.</p> -->
+                <p>QLines is a cloud-native platform designed to manage the remote devices, even when they are thousands of miles away, providing on-demand instant access. QLines allows easy monitoring of real-time sensor data via MQTT, HTTP, WebSockets,etc. The platform benefits from geo and local redundancy, providing a reliable high-performance data processing.</p>
                 <p>
-                <ul class="colorlib-social-icons">
-                    <li><a href="#"><i class="icon-twitter"></i></a></li>
-                    <li><a href="#"><i class="icon-facebook"></i></a></li>
-                    <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                    <li><a href="#"><i class="icon-dribbble"></i></a></li>
-                </ul>
+                    <ul class="colorlib-social-icons">
+                        <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        <li><a href="#"><i class="icon-facebook"></i></a></li>
+                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                    </ul>
                 </p>
             </div>
             <div class="col-md-3 colorlib-widget">
@@ -32,10 +28,10 @@
             <div class="col-md-3 colorlib-widget">
                 <h4>Contact Info</h4>
                 <ul class="colorlib-footer-links">
-                    <li><a href="contact"><i class="icon-pencil"></i>Contact us</a></li>
+                    <li><a href="https://www.qlines.net/contact"><i class="icon-pencil"></i>Contact us</a></li>
                     <!-- <li><a href="tel://00498920073917"><i class="icon-phone3"></i>+49 (89) 20073917</a></li> -->
                     <!-- <li><a href="mailto:contact@qlines.net"><i class="icon-mail"></i>contact@qlines.net</a></li> -->
-                    <li><a href="#"><i class="icon-link"></i>www.qlines.net</a></li>
+                    <li><a href="#"><i class="icon-link"></i>https://www.qlines.net</a></li>
                 </ul>
             </div>
         </div>
